fix passenger router
