# routes/routes.js
@@ -1,13 +1,13 @@
 var express = require('express');
 var router = express.Router();
 var routeController = require('../controllers/route.controller.js');
-// Base path is /api/passenger
+// Base path is /api/routes
 
 router.get('/', routeController.getRoutes);
 
 router.get('/:id', routeController.getById);
 
-router.get('/passenger/:id', routeController.getByPassengerId);
+router.get('/passenger/:passenger_id', routeController.getByPassengerId);
 
 router.post('/', routeController.register);
 
